--- a/index.html
+++ b/index.html
@@ -1,11 +1,32 @@
 <body>
   <h1>Strona do obliczania obwodu figur</h1>
 
-  <p >Jestem paragrafem tekstu. Nadano mi atrybut class, aby umożliwić stylowanie.</p>
-  <p>Jestem paragrafem tekstu.</p>
-
-  
-  <label for="dlugosc_boku_kwadratu">Podaj długość boku kwadratu</label>
+  <p>Oblicz obwód kwadratu</p>
+  <label for="dlugosc_boku_kwadratu">Podaj długość boku kwadratu: </label>
   <input id="dlugosc_boku_kwadratu" type="text">
+
+  <p>Oblicz obwód koła</p>
+  <label for="dlugosc_promienia_kola">Podaj długość promienia koła: </label>
+  <input id="dlugosc_promienia_kola" type="text">
   
+  <p>Oblicz obwód prostokąta</p>
+  <label for="dlugosc_boku_a_prostokata">Podaj długość pierwszego boku prostokata: </label>
+  <input id="dlugosc_boku_a_prostokata" type="text">
+  <label for="dlugosc_boku_b_prostokata">Podaj długość drugiego boku prostokata: </label>
+  <input id="dlugosc_boku_b_prostokata" type="text">
+
+  <p>Oblicz obwód rombu</p>
+  <label for="dlugosc_boku_rombu">Podaj długość boku rombu: </label>
+  <input id="dlugosc_boku_rombu" type="text">
+
+  <p>Oblicz obwód trapezu</p>
+  <label for="dlugosc_boku_a_trapezu">Podaj długość pierwszego boku trapezu: </label>
+  <input id="dlugosc_boku_a_trapezu" type="text">
+  <label for="dlugosc_boku_b_trapezu">Podaj długość drugiego boku trapezu: </label>
+  <input id="dlugosc_boku_b_trapezu" type="text">
+  <label for="dlugosc_boku_c_trapezu">Podaj długość trzeciego boku trapezu: </label>
+  <input id="dlugosc_boku_c_trapezu" type="text">
+  <label for="dlugosc_boku_d_trapezu">Podaj długość czwartego boku trapezu: </label>
+  <input id="dlugosc_boku_d_trapezu" type="text">
+
 </body>
