--- a/index.html
+++ b/index.html
@@ -4,20 +4,29 @@
   <p>Oblicz obwód kwadratu</p>
   <label for="dlugosc_boku_kwadratu">Podaj długość boku kwadratu: </label>
   <input id="dlugosc_boku_kwadratu" type="text">
+  <button type="button">Oblicz</button>
+  Wynik: <div id="kwadrat_wynik"></div>
+
 
   <p>Oblicz obwód koła</p>
   <label for="dlugosc_promienia_kola">Podaj długość promienia koła: </label>
   <input id="dlugosc_promienia_kola" type="text">
+  <button type="button">Oblicz</button>
+  Wynik: <div id="kolo_wynik"></div>
   
   <p>Oblicz obwód prostokąta</p>
   <label for="dlugosc_boku_a_prostokata">Podaj długość pierwszego boku prostokata: </label>
   <input id="dlugosc_boku_a_prostokata" type="text">
   <label for="dlugosc_boku_b_prostokata">Podaj długość drugiego boku prostokata: </label>
   <input id="dlugosc_boku_b_prostokata" type="text">
+  <button type="button">Oblicz</button>
+  Wynik: <div id="prostokat_wynik"></div>
 
   <p>Oblicz obwód rombu</p>
   <label for="dlugosc_boku_rombu">Podaj długość boku rombu: </label>
   <input id="dlugosc_boku_rombu" type="text">
+  <button type="button">Oblicz</button>
+  Wynik: <div id="romb_wynik"></div>
 
   <p>Oblicz obwód trapezu</p>
   <label for="dlugosc_boku_a_trapezu">Podaj długość pierwszego boku trapezu: </label>
@@ -28,5 +37,7 @@
   <input id="dlugosc_boku_c_trapezu" type="text">
   <label for="dlugosc_boku_d_trapezu">Podaj długość czwartego boku trapezu: </label>
   <input id="dlugosc_boku_d_trapezu" type="text">
+  <button type="button">Oblicz</button>
+  Wynik: <div id="trapez_wynik"></div>
 
 </body>
