obliczenie obwodu kwadratu poprawka

--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
     <p>Oblicz obwód kwadratu</p>
     <label for="dlugosc_boku_kwadratu">Podaj długość boku kwadratu: </label>
     <input id="dlugosc_boku_kwadratu" type="text">
-    <button type="button" onclick="obwod_kwadratu(dlugosc_boku_kwadratu.value)">Oblicz</button>
-    Wynik: <div id="kwadrat_wynik"></div>
-
+    <button type="button" onclick="obwod_kwadratu(dlugosc_boku_kwadratu.value)">Oblicz obwód kwadratu</button>
 
     <p>Oblicz obwód koła</p>
     <label for="dlugosc_promienia_kola">Podaj długość promienia koła: </label>
