obliczenie pola kwadratu

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <label for="dlugosc_boku_kwadratu">Podaj długość boku kwadratu: </label>
     <input id="dlugosc_boku_kwadratu" type="text">
     <button type="button" onclick="obwod_kwadratu(dlugosc_boku_kwadratu.value)">Oblicz obwód kwadratu</button>
+    <button type="button" onclick="pole_kwadratu(dlugosc_boku_kwadratu.value)">Oblicz pole kwadratu</button>
 
     <p>Oblicz obwód koła</p>
     <label for="dlugosc_promienia_kola">Podaj długość promienia koła: </label>
