poprawka obliczenia prostokata

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     <input id="dlugosc_boku_a_prostokata" type="text">
     <label for="dlugosc_boku_b_prostokata">Podaj długość drugiego boku prostokata: </label>
     <input id="dlugosc_boku_b_prostokata" type="text">
-    <button type="button" onclick="obwod_prostokata(dlugosc_boku_prostokata.value)">Oblicz obwód prostokata</button>
-    <button type="button" onclick="pole_prostokata(dlugosc_boku_prostokata.value)">Oblicz pole prostokata</button>
+    <button type="button" onclick="obwod_prostokata(dlugosc_boku_a_prostokata.value, dlugosc_boku_b_prostokata.value)">Oblicz obwód prostokata</button>
+    <button type="button" onclick="pole_prostokata(dlugosc_boku_a_prostokata.value, dlugosc_boku_b_prostokata.value)">Oblicz pole prostokata</button>
 
     <p>Oblicz obwód rombu</p>
     <label for="dlugosc_boku_rombu">Podaj długość boku rombu: </label>
