obliczenia rombu poprawki pola

--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
     <label for="dlugosc_boku_rombu">Podaj długość boku rombu: </label>
     <input id="dlugosc_boku_rombu" type="text">
     <button type="button" onclick="obwod_rombu(dlugosc_boku_rombu.value)">Oblicz obwód rombu</button>
+    <br>
+    <label for="dlugosc_przekatnej_e_rombu">Podaj długość pierwszej przekątnej rombu: </label>
+    <input id="dlugosc_przekatnej_e_rombu" type="text">
+    <label for="dlugosc_przekatnej_f_rombu">Podaj długość drugiej przekątnej rombu: </label>
+    <input id="dlugosc_przekatnej_f_rombu" type="text">
     <button type="button" onclick="pole_rombu(dlugosc_przekatnej_e_rombu.value, dlugosc_przekatnej_f_rombu.value)">Oblicz pole rombu</button>
 
 
