poprawka tytułu strony

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <body>
 
-    <h1>Strona do obliczania obwodu figur</h1>
+    <h1>Strona do obliczania pola i obwodu figur</h1>
 
     <p>Kwadrat</p>
     <label for="dlugosc_boku_kwadratu">Podaj długość boku kwadratu: </label>
